Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -727,7 +727,7 @@
     "high": "Alto",
     "high-purchase-price": "Precio más alto",
     "hint-create-accounting-entry": "Erstellen des Buchhaltungseintrag für die steuerliche Regularisierung des Zeitraumes",
-    "hint-vat-register": "View\/Modify VAT registration",
+    "hint-vat-register": "MwSt.-Registrierung anzeigen\/ändern",
     "history": "Historial",
     "homepage": "Startseite",
     "host": "host:",
@@ -812,7 +812,7 @@
     "ivarep-subaccount-not-found": "Unterkonto angewendet MwSt nicht gefunden",
     "ivasop-account-not-found": "Unterkonto Vorsteuer nicht gefunden",
     "january": "Enero",
-    "job-name": "job-name",
+    "job-name": "Jobname",
     "journal": "Journal",
     "journal-closing": "journal-closing",
     "journal-opening": "journal-opening",
@@ -853,7 +853,7 @@
     "last-block": "Letzter Bolck",
     "last-ip": "Letzte IP",
     "last-month": "Letzter Monat",
-    "last-price-estimation": "Última precio de presupuesto",
+    "last-price-estimation": "Letzte Preisabschätzung",
     "last-price-sale": "Último precio de venta",
     "last-purchase-price": "Letzter Einkaufspreis",
     "last-quarter": "Letztes Quartal",
@@ -889,7 +889,7 @@
     "lock-entry": "Buchung sperren",
     "lock-invoice": "R",
     "lock-unlock": "sperren-entsperren",
-    "lock-unlock-account-entry": "Block\/Unlock the accounting entry",
+    "lock-unlock-account-entry": "Buchung sperren\/entsperren",
     "locked": "Verschlossen",
     "log": "Register",
     "login": "Anmeldung",
@@ -1001,7 +1001,7 @@
     "new": "Neu",
     "new-acc-entry-line-p": "Puedes introducir una línea escribiendo el código de la subcuenta debajo o pulsando el botón subcuentas y seleccionando una subcuenta.",
     "new-address": "Neue Übersetzung",
-    "new-customer": "new customer",
+    "new-customer": "neuer Kunde",
     "new-customers": "new-customers",
     "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
     "new-password": "neues Passwort",
@@ -1060,8 +1060,8 @@
     "only-insert": "Sólo añadir",
     "only-owner-data": "only-owner-data",
     "only-pending": "only-pending",
-    "only-suspended": "only-suspended",
-    "open": "open",
+    "only-suspended": "Nur ausgesetzt",
+    "open": "öffnen",
     "open-exercise": "open-exercise",
     "open-tab": "Abrir en una nueva pestaña",
     "opened": "Opened",
@@ -1097,7 +1097,7 @@
     "paid-or-unpaid": "Bezahlt oder unbezahlt",
     "paid-receipts-prevent-action": "Bezahlte Quittungen verhindern Aktion",
     "parent": "Elternteil",
-    "parent-account": "Parent Account",
+    "parent-account": "Mutterkonto",
     "parent-family-cant-be-child": "Die Elternfamilie kann nicht mit dem Kind identisch sein.",
     "parent-group": "Parent group",
     "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
@@ -1157,7 +1157,7 @@
     "plugin-needs-fs-version": "Plugin %pluginName% benötigt FacturaScripts %minVersion%, aber sie haben FacturaScripts %version% installiert",
     "plugin-not-compatible": "Plugin %pluginName% nicht kompatibel mit FacturaScripts 2018.",
     "plugin-order": "Orden: %num%",
-    "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
+    "plugin-phpversion-error": "Das Plugin %pluginName% erfordert PHP %php% oder höher",
     "plugin-removal-disabled": "Plugin-Entfernung ist auf diesem Server deaktiviert",
     "plugin-unsupported-version": "plugin-unsupported-version",
     "plugin-update": "Aktualliesierung des Plugins %pluginName% auf Version %version%",
@@ -1267,7 +1267,7 @@
     "registered-installation": "Instalation registriert #%number%",
     "registered-installation-p": "Diese Installation wurde bereits registriert. Wenn Sie Zahlungspflichtige Plugins haben, klicken Sie auf die Schaltfläche Verwalten, um sie zu verknüpfen und aktualisieren zu können.",
     "regularization-operation": "Regularización",
-    "reject": "Rechazar",
+    "reject": "Ablehnen",
     "rejected": "abgelehnt",
     "related": "verbunden",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
@@ -1308,7 +1308,7 @@
     "right": "Right",
     "risky-customer": "risky-customer",
     "rol": "Rol",
-    "role": "Role",
+    "role": "Rolle",
     "roles": "Rollen",
     "rules": "Rules",
     "run": "run",
@@ -1366,7 +1366,7 @@
     "service": "service",
     "services": "services",
     "settings": "Ajustes",
-    "settlement": "settlement",
+    "settlement": "Abwicklung",
     "settlement-product": "settlement-product",
     "settlements": "settlements",
     "setup-options": "Einrichtungsoptionen",
@@ -1380,7 +1380,7 @@
     "show-balance-graphic": "show-balance-graphic",
     "show-crm-warnings": "Mostrar avisos CRM",
     "show-expired-receipts": "Mostrar recibos vencidos",
-    "show-month-stats": "Mostrar estadísticas mensuales",
+    "show-month-stats": "Monatsstatistiken anzeigen",
     "show-pending-remittances": "Zeige ausstehende Überweisungen",
     "show-price": "Show price on print",
     "show-quantity": "Show quantity on print",
@@ -1411,7 +1411,7 @@
     "specials-actions": "Specials Actions",
     "spreadsheet-xls": "XLS-Datei",
     "standard": "standard",
-    "start": "Inicio",
+    "start": "Start",
     "start-date": "Anfangsdatum",
     "start-hour": "Hora de inicio",
     "start-time": "start-time",
@@ -1440,7 +1440,7 @@
     "subaccount-irpf-creditor": "subaccount-irpf-creditor",
     "subaccount-not-found": "Unterkonto 0 wurde nicht gefunden.",
     "subaccount-purchases": "Account for purchases",
-    "subaccount-pyg-not-found": "subaccount-pyg-not-found",
+    "subaccount-pyg-not-found": "Teil-Konto für Gewinn- und Verlustrechnung nicht gefunden",
     "subaccount-sales": "Cuenta de ventas",
     "subaccounts": "Unterkonten",
     "subfamilies": "subfamilies",
