--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -144,7 +144,7 @@
     "balance-account": "Balance account",
     "balance-account-abreviated": "Balance account abreviated",
     "balance-amounts": "Trial Balance",
-    "balance-sheet": "Balance Sheet",
+    "balance-sheet": "Bilancio",
     "balance-sheets": "Balance Sheets",
     "balances": "Balances",
     "bank-account": "Conto bancario",
@@ -155,7 +155,7 @@
     "barcode": "Codice a barre",
     "bcc": "BCC",
     "big": "grande",
-    "billing": "Billing",
+    "billing": "Fatturazione",
     "billing-address": "Indirizzo Di Fatturazione",
     "birth-date": "Data di nascita",
     "birthday": "Compleanno",
@@ -163,7 +163,7 @@
     "blocked": "bloccato",
     "blocked-date": "Bloccato a",
     "body": "Corpo",
-    "book": "Reserve",
+    "book": "Prenota",
     "box-closed-ok": "Scatola chiusa correttamente",
     "boxes": "Scatole",
     "browse": "Navigare",
@@ -283,7 +283,7 @@
     "company-warehouse": "Azienda\/Magazzino",
     "comparative": "Comparativo",
     "compared": "comparato",
-    "compatible": "Compatible",
+    "compatible": "Compatibile",
     "completed": "completato",
     "component": "Component",
     "concept": "Concept",
@@ -331,7 +331,7 @@
     "create-estimation": "Creare preventivo",
     "create-invoice": "Creare fattura",
     "create-new-record": "Crea un nuovo record",
-    "created": "Created",
+    "created": "Creato",
     "created-default-admin-account": "Ha creato utente <b> amministratore <\/ b> con la password <b> amministratore <\/ b>.",
     "creation-date": "Data di creazione",
     "credit": "Credito",
@@ -492,7 +492,7 @@
     "drag": "Trascinare",
     "dto": "Disco.",
     "dto-2": "dto-2",
-    "duplicate-record": "duplicate-record",
+    "duplicate-record": "record duplicato",
     "duplicated-reference": "Riferimento '%reference%' duplicato",
     "duplicated-request": "duplicated-request",
     "duration": "durata",
@@ -643,7 +643,7 @@
     "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Per l'acquisto",
     "for-sale": "In vendita",
-    "foresee": "Foresee",
+    "foresee": "Prevedere",
     "format": "formato",
     "formula-cost-price": "formula-cost-price",
     "formula-sale-price": "formula-sale-price",
@@ -725,7 +725,7 @@
     "help-server-accepts-filesize": "Questo server supporta una dimensione massima di %1$s MB. Se il plugin prende il sopravvento, si sarà in grado di caricare, anche non si può lasciare nulla.",
     "hide": "hide",
     "high": "Alto",
-    "high-purchase-price": "Precio más alto",
+    "high-purchase-price": "Prezzo più alto",
     "hint-create-accounting-entry": "Create the accounting entry for the regularization of the taxes of the period",
     "hint-vat-register": "View\/Modify VAT registration",
     "history": "Historial",
@@ -809,7 +809,7 @@
     "item-limit": "Elementi per pagina",
     "items-added-correctly": "%num% elemento\/i aggiunti correttamente",
     "items-removed-correctly": "elementi rimossi correttamente",
-    "ivarep-subaccount-not-found": "ivarep-subaccount-not-found",
+    "ivarep-subaccount-not-found": "Subconto IVA non trovato",
     "ivasop-account-not-found": "ivasop-account-not-found",
     "january": "Enero",
     "job-name": "Nome del lavoro",
@@ -871,7 +871,7 @@
     "level-benefit-sales": "Nivel para ver beneficios",
     "level-cost-sales": "Livello per visualizzare i costi",
     "level1": "Livello 1",
-    "level2": "Level 2",
+    "level2": "Livello 2",
     "level3": "Livello 3",
     "level4": "Level 4",
     "liabilities": "Liabilities",
@@ -1133,7 +1133,7 @@
     "percentage-vat": "% IVA",
     "period": "period",
     "personalized": "Personalizado",
-    "phase": "phase",
+    "phase": "fase",
     "phone": "telefono",
     "phone2": "Telefono 2",
     "phones": "Telefoni",
@@ -1293,7 +1293,7 @@
     "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
     "reports": "Rapporti",
     "request-sent": "request-sent",
-    "required": "required",
+    "required": "richiesto",
     "requires-core": "Requiere FacturaScripts %version%",
     "reserved": "Riservato",
     "reset": "Ripristina correttamente le impostazioni, premere <a href=\" %1$s#avanzado\">qui<\/a> per continuare.",
@@ -1373,7 +1373,7 @@
     "shipping": "Spedizione",
     "shipping-address": "Indirizzo di spedizione",
     "shop": "Tienda",
-    "shops": "Tiendas",
+    "shops": "negozi",
     "short": "Corto",
     "short-name": "Nome breve",
     "show": "show",
@@ -1423,7 +1423,7 @@
     "status-name-valid-length": "Nome dello stato non valido. Deve essere compreso tra 1 e 20 caratteri.",
     "status-value-is-number": "Il campo è stato sereno.",
     "stock": "Azione",
-    "stock-transfer": "stock transfer",
+    "stock-transfer": "trasferimento di magazzino",
     "stock-transfers": "stock transfers",
     "stockmax": "Magazzino max",
     "stockmin": "Scorte min.",
