--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -23,7 +23,7 @@
     "account-parent-error": "La cuenta padre es incorrecta o no pertenece al ejercicio",
     "accounting": "Contabilidad",
     "accounting-accounts": "Cuentas contables",
-    "accounting-balance": "Balance",
+    "accounting-balance": "Saldo księgowe",
     "accounting-balances": "Balances",
     "accounting-concept": "Concepto contable",
     "accounting-data-missing": "Plan contable no encontrado para el ejercicio %exerciseName%",
@@ -37,7 +37,7 @@
     "accounting-file": "Archivo de cuentas",
     "accounting-heading": "Epígrafe",
     "accounting-heading-code": "ID Epígrafe",
-    "accounting-items": "Partidas contables",
+    "accounting-items": "Pozycje księgowe",
     "accounting-lines-error": "Error en las líneas del asiento contable",
     "accounting-plan": "Plan contable",
     "accounting-possible-duplicated": "El asiento contable posiblemente está duplicado con este otro. Si no es así, para evitar este mensaje, simplemente cambie el concepto.",
@@ -294,7 +294,7 @@
     "connect": "Conectar",
     "contact": "Kontakt",
     "contact-data": "Datos del contacto",
-    "contact-info": "Información de contacto",
+    "contact-info": "Informacje kontaktowe",
     "contact-information": "Información de contacto",
     "contact-person": "Persona de contacto",
     "contacts": "Contactos",
@@ -310,7 +310,7 @@
     "conversion-rate": "Tasa de conversión a €",
     "conversion-rate-not-0": "La tasa de conversión no puede ser 0.",
     "convert-into-customer": "Convertir en cliente",
-    "convert-into-supplier": "Convertir en proveedor",
+    "convert-into-supplier": "Konwertuj do dostawcy",
     "cookies": "Cookies",
     "copy": "Copiar",
     "copy-p": "Rellene el formulario para hacer una copia de este modelo",
@@ -340,7 +340,7 @@
     "cron-timeout": "Cron został zatrzymany, aby nie przekroczyć maksymalnego czasu wykonania PHP. Proszę, uruchom cron z terminala, aby uniknąć tego ograniczenia.",
     "crons": "Crony",
     "currency": "Divisa",
-    "currency-position": "Posición símbolo de divisa",
+    "currency-position": "Pozycja symbolu waluty",
     "current-quarter": "Bieżący kwartał",
     "current-risk": "Riesgo actual",
     "customer": "Cliente",
@@ -465,7 +465,7 @@
     "do-not-disable-plugins": "No desactivar plugins",
     "do-not-group": "No agrupar",
     "do-nothing": "No hacer nada",
-    "doc-type": "Tipo de documento",
+    "doc-type": "Typ dokumentu",
     "document": "Documento",
     "document-configuration": "Configuración de documentos",
     "document-report": "Informe de documentos",
@@ -641,7 +641,7 @@
     "for-admins": "Para administradores",
     "for-all": "Para todos",
     "for-all-exercises": "Dla wszystkich ćwiczeń",
-    "for-purchase": "Se compra",
+    "for-purchase": "Do zakupu",
     "for-sale": "Se vende",
     "foresee": "Prever",
     "format": "Formato",
@@ -843,7 +843,7 @@
     "languages-eu_ES": "Euskera",
     "languages-fr_FR": "Francés",
     "languages-gl_ES": "Gallego",
-    "languages-it_IT": "Italiano",
+    "languages-it_IT": "Włoski",
     "languages-pl_PL": "Polaco",
     "languages-pt_BR": "Portugués (Brasil)",
     "languages-pt_PT": "Portugués",
@@ -851,7 +851,7 @@
     "last-activity": "Última conexión",
     "last-bimester": "El pasado bimestre",
     "last-block": "Último bloque",
-    "last-ip": "Última IP",
+    "last-ip": "Ostatni adres IP",
     "last-month": "El mes pasado",
     "last-price-estimation": "Último precio de presupuesto",
     "last-price-sale": "Último precio de venta",
@@ -912,7 +912,7 @@
     "lot": "Lote",
     "low-security": "Baja seguridad",
     "machine": "Máquina",
-    "machines": "Máquinas",
+    "machines": "Maszyny",
     "macro-account-note-info": "Códigos para el reemplazo por valores",
     "mail-server-error": "Error al conectar al servidor de correo",
     "mail-test-error": "La prueba de email ha fallado",
@@ -1049,7 +1049,7 @@
     "number-length": "Longitud del número",
     "number-recipients": "Nº perceptores",
     "number2": "Número 2",
-    "numeric-formats": "Formatos numéricos",
+    "numeric-formats": "Formaty numeryczne",
     "numsupplier": "Núm. proveedor",
     "observations": "Observaciones",
     "october": "Octubre",
@@ -1116,10 +1116,10 @@
     "payment-days": "Días de pago",
     "payment-method": "Forma de pago",
     "payment-methods": "Formas de pago",
-    "payments": "Pagos",
+    "payments": "Płatności",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
-    "pct-surcharge": "% Recargo",
+    "pct-surcharge": "% nadpłaty",
     "pct-tax": "% podatku",
     "pct-vat": "% Impuesto",
     "pending": "Pendiente",
@@ -1151,7 +1151,7 @@
     "plugin-file-too-big": "Ten serwer nie pozwala na przesyłanie plików większych niż %size% MB. Proszę zwiększyć maksymalny rozmiar przesyłanego pliku w PHP lub skopiuj plik do folderu wtyczek.",
     "plugin-installation-disabled": "La instalación de plugins está desactivada en este servidor",
     "plugin-installed": "Plugin '%pluginName%' instalado",
-    "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
+    "plugin-need-update": "Wtyczka %plugin% będzie wymagać aktualizacji, aby działała z nową wersją FacturaScripts.",
     "plugin-need-update-but": "El plugin %plugin% todavía no tiene actualización compatible.",
     "plugin-needed": "Se requiere el plugin %pluginName%.",
     "plugin-needs-fs-version": "El plugin %pluginName% necesita FacturaScripts %minVersion% pero tiene instalado FacturaScripts %version%",
@@ -1174,7 +1174,7 @@
     "predefined-concepts": "Conceptos Predefinidos",
     "preferences": "Preferencias",
     "preview": "Previsualizar",
-    "previous": "Anterior",
+    "previous": "Poprzedni",
     "previous-balance": "Balance anterior",
     "previous-documents": "Documentos previos",
     "previous-quarter": "Poprzedni kwartał",
@@ -1242,7 +1242,7 @@
     "receipt-expense-account": "Gastos en el recibo %document%",
     "receipts": "Recibos",
     "record-deleted-correctly": "Registro eliminado correctamente!",
-    "record-deleted-error": "Error al eliminar el registro",
+    "record-deleted-error": "Błąd podczas usuwania rekordu",
     "record-not-found": "Registro no encontrado",
     "record-save-error": "Ha ocurrido un error mientras se guardaban los datos",
     "record-updated-correctly": "Registro actualizado correctamente.",
@@ -1382,7 +1382,7 @@
     "show-expired-receipts": "Mostrar recibos vencidos",
     "show-month-stats": "Mostrar estadísticas mensuales",
     "show-pending-remittances": "Mostrar remesas pendientes",
-    "show-price": "Mostrar precio en la impresión",
+    "show-price": "Pokaż cenę w druku",
     "show-quantity": "Mostrar cantidad en la impresión",
     "show-section-new": "Pokaż nową sekcję",
     "signature": "Firma",
@@ -1407,7 +1407,7 @@
     "source-code": "Código fuente",
     "special-account": "Cuenta especial",
     "special-accounting-entries": "Asientos especiales",
-    "special-accounts": "Cuentas especiales",
+    "special-accounts": "Konta specjalne",
     "specials-actions": "Acciones especiales",
     "spreadsheet-xls": "Archivo Excel",
     "standard": "Estándar",
@@ -1470,7 +1470,7 @@
     "supplier-invoices": "Facturas de proveedores",
     "supplier-not-found": "Proveedor no encontrado",
     "supplier-order": "Pedido de Proveedor",
-    "supplier-orders": "Pedidos a proveedores",
+    "supplier-orders": "Zamówienia od dostawców",
     "supplier-payment-concept": "Pago del recibo %document%",
     "supplier-products": "Productos del proveedor",
     "supplier-reference": "Referencia de proveedor",
@@ -1571,7 +1571,7 @@
     "under-minimums": "Bajo mínimos",
     "undo": "Deshacer",
     "unit-profit": "Beneficio unit.",
-    "unit-purchase-price": "Precio compra unit.",
+    "unit-purchase-price": "Cena zakupu jednostkowa",
     "unit-sale-price": "Precio venta unit.",
     "unlimited": "Sin límites",
     "unlink": "Desvincular",
@@ -1635,7 +1635,7 @@
     "warning": "Atención",
     "warnings": "Ostrzeżenia",
     "web": "Web",
-    "website": "Web",
+    "website": "Strona internetowa",
     "wednesday": "Miércoles",
     "weeks": "Semanas",
     "weight": "Peso",
