--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -228,12 +228,12 @@
     "children": "Criança",
     "children-accounts": "Children Accounts",
     "choose-currency": "Choose currency",
-    "choose-doc-type": "Choose document type",
+    "choose-doc-type": "Escolher o tipo de documento",
     "choose-employee": "Choose employee",
     "choose-files": "Escolher arquivos",
     "choose-payment-method": "Choose payment method",
     "choose-serie": "Seleciona a série",
-    "choose-source": "Choose source",
+    "choose-source": "Escolher fonte",
     "cifnif": "CIF\/NIF",
     "cities": "cidades",
     "city": "Cidade",
@@ -314,7 +314,7 @@
     "cookies": "Cookies",
     "copy": "Copiar",
     "copy-p": "Preencha o formulário antes de fazer a cópia deste modelo",
-    "copy-subaccounts": "copy-subaccounts",
+    "copy-subaccounts": "Copiar subcontas",
     "core-update": "core-update",
     "core-update-warning": "Avisos de atualização",
     "correct": "Correto",
@@ -413,7 +413,7 @@
     "delete-all": "Eliminar tudo",
     "delete-closing": "delete-closing",
     "delete-data": "Eliminar dados",
-    "delete-file": "delete-file",
+    "delete-file": "Eliminar ficheiro",
     "delete-logs": "Excluir logs",
     "delete-opening": "Eliminar abertura",
     "delete-record": "Remover registro",
@@ -427,7 +427,7 @@
     "department": "d",
     "departments": "departamentos",
     "desc": "Descrição",
-    "desc-alfa-code-2": "Identificação oficial para o nome dos países e outras unidades administrativas",
+    "desc-alfa-code-2": "Identificação oficial para o nome dos países e outras dependências administrativas",
     "desc-alfa-code-3": "Identificação oficial para o nome dos países e outras unidades administrativas",
     "desc-business-name": "Nome oficial do cliente, para faturas e outros documentos.",
     "desc-business-name-2": "Nome legal ou legalmente registrado do cliente",
@@ -508,7 +508,7 @@
     "email-notification-not-exists": "Notificação de email %name% não encontrada",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "email-replies-to",
-    "email-sent": "Sent by Mail",
+    "email-sent": "Email enviado",
     "email-sent-to": "email-sent-to",
     "email-signature": "email-signature",
     "email-to": "Email To",
@@ -644,7 +644,7 @@
     "for-purchase": "Para compra",
     "for-sale": "À venda",
     "foresee": "Prever",
-    "format": "format",
+    "format": "Formato",
     "formula-cost-price": "formula-cost-price",
     "formula-sale-price": "formula-sale-price",
     "formula-to-apply": "Fórmula para candidatar-se",
@@ -754,13 +754,13 @@
     "in-stock": "in-stock",
     "inactive": "Inativo",
     "income-and-expenses": "Income and Expenses",
-    "incompatible-document": "incompatible-document",
+    "incompatible-document": "Documento incompatível: %code%. Para agrupar documentos, eles devem ter o mesmo cliente ou fornecedor, série, armazém, moeda e descontos globais.",
     "incompatible-with-facturascripts": "Não é compatível com FacturaScripts %version%",
     "incorrect-accounting-amount": "Incorrect accounting entry amount.",
     "info": "Info",
     "infostate-component-title": "Status Information",
     "initial-number": "initial-number",
-    "insert-update": "Añadir o modificar",
+    "insert-update": "Inserir ou atualizar",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
     "installer": "Instalador do FacturaScripts 2018 (Alpha)",
@@ -935,7 +935,7 @@
     "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
     "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Estoque máximo",
-    "may": "Mayo",
+    "may": "Maio",
     "mega-search": "MegaBuscador",
     "memcache": "Memcache 0",
     "memcache-clear": "Memcache foi limpo.",
@@ -1024,7 +1024,7 @@
     "no-stock": "Sem estoque",
     "non-editable-accounting-entry": "non-editable-accounting-entry",
     "non-editable-columns": "non-editable-columns",
-    "non-editable-document": "Non editable document",
+    "non-editable-document": "Documento não editável",
     "none": "Nenhum",
     "normal": "normal",
     "not-allowed-delete": "Não tem permiso para eliminar",
@@ -1034,7 +1034,7 @@
     "not-public": "No público",
     "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
-    "not-valid-fiscal-number": "not-valid-fiscal-number",
+    "not-valid-fiscal-number": "Número fiscal inválido",
     "not-valid-image": "No es una imagen válida",
     "not-valid-percentage-retention": "Not valid percentage retention",
     "note": "Nota",
@@ -1046,7 +1046,7 @@
     "november": "Novembro",
     "number": "Número",
     "number-attachments": "Nº de adjuntos",
-    "number-length": "number-length",
+    "number-length": "Comprimento do número",
     "number-recipients": "Nº perceptores",
     "number2": "Número 2",
     "numeric-formats": "Formatos numéricos",
@@ -1101,13 +1101,13 @@
     "parent-family-cant-be-child": "A família mãe não pode ser a mesma que a criança.",
     "parent-group": "Grupo Pai",
     "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
-    "parent-group-loop": "Parent group %parentGroup% causing circular relation.",
+    "parent-group-loop": "Grupo pai %parentGroup% causando relação circular",
     "partnumber": "Número da peça",
     "passenger": "Pasajero",
     "password": "Senha",
     "pattern": "pattern",
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
-    "pattern-without-serie": "El patrón elegido no incluye serie, por lo que es posible que genere códigos duplicados para cada serie",
+    "pattern-without-serie": "O padrão escolhido não inclui série, o que pode gerar códigos duplicados para cada série",
     "pattern-without-year": "O padrão escolhido não inclui exercício ou data, pelo que pode gerar códigos duplicados em cada exercício",
     "pay": "pay",
     "pay-with-card": "pay-with-card",
@@ -1191,7 +1191,7 @@
     "print-price": "Imprimir preços",
     "print-quantity": "Imprimir cantidad",
     "printed": "Printed",
-    "printing-format": "printing-format",
+    "printing-format": "Formato de impressão",
     "printing-formats": "printing-formats",
     "priority": "Prioridade",
     "private": "Privado",
@@ -1331,7 +1331,7 @@
     "second-trimester": "Segundo Trimestre",
     "select": "select",
     "select-all": "selecionar-todos",
-    "select-none": "select-none",
+    "select-none": "Selecionar nenhum",
     "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
     "select-user": "Select User",
     "selected-quantity": "approve-quantity",
@@ -1365,7 +1365,7 @@
     "server": "Servidor",
     "service": "Serviço",
     "services": "Serviços",
-    "settings": "Ajustes",
+    "settings": "Configurações",
     "settlement": "settlement",
     "settlement-product": "settlement-product",
     "settlements": "settlements",
@@ -1400,7 +1400,7 @@
     "sort-by-date-asc": "Ordenar por data crescente",
     "sort-by-date-desc": "Ordenar por data desc.",
     "sort-by-ref-asc": "Ordenar por referência asc.",
-    "sort-by-ref-desc": "Ordenar por referencia desc.",
+    "sort-by-ref-desc": "Ordenar por referência desc.",
     "sorted-asc": "Ordenado ascendente",
     "sorted-desc": "Ordenado descendente",
     "source": "Fonte",
@@ -1539,7 +1539,7 @@
     "total-cost": "Custo total",
     "total-purchases": "Total das Compras",
     "total-sales": "Total das Vendas",
-    "total-value-error": "Quantidade total de 0 1 incorreta (2). Valor correto: 3",
+    "total-value-error": "Valor total de %docType% %docCode% incorreto (%docTotal%). Valor correto: %calcTotal%",
     "total-with-taxes": "Total com impostos",
     "totalirpf-value-error": "Quantidade total de IRPF de 0 1 incorreta (2). Valor correto: 3",
     "totaliva-value-error": "Valor de imposto total de 0 1 incorreto (2). Valor correto: 3",
@@ -1561,7 +1561,7 @@
     "type-debug": "Type debug",
     "type-emergency": "Tipo de emergência",
     "type-error": "Type error",
-    "type-info": "Type info",
+    "type-info": "Informação do tipo",
     "type-notice": "Type notice",
     "type-success": "type-success",
     "type-warning": "Type warning",
@@ -1584,7 +1584,7 @@
     "until-subaccount": "until-subaccount",
     "update": "update",
     "update-stock": "Update stock",
-    "update-supplier-prices": "update-supplier-prices",
+    "update-supplier-prices": "Atualizar preços dos fornecedores",
     "update-time": "update-time",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Updater",
@@ -1601,7 +1601,7 @@
     "using-filecache": "Usando Filecache",
     "using-memcache": "Usando Memcache",
     "valid-for-day": "Válido por um dia",
-    "validate": "validate",
+    "validate": "Validar",
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo de avaliação",
     "value": "Valor",
@@ -1666,7 +1666,7 @@
     "yes": "Sim",
     "yesterday": "Ontem",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
-    "you-sent-a-audio": "Enviaste un audio",
+    "you-sent-a-audio": "Enviaste um áudio",
     "you-sent-a-document": "Enviaste un documento",
     "you-sent-a-location": "Você enviou uma localização",
     "you-sent-a-picture": "Você enviou uma imagem",
