--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -233,7 +233,7 @@
     "choose-files": "Escolher arquivos",
     "choose-payment-method": "Choose payment method",
     "choose-serie": "Seleciona a série",
-    "choose-source": "Choose source",
+    "choose-source": "Escolher fonte",
     "cifnif": "TIC \/ TIN",
     "cities": "cidades",
     "city": "Cidade",
@@ -413,7 +413,7 @@
     "delete-all": "delete-all",
     "delete-closing": "delete-closing",
     "delete-data": "Delete data",
-    "delete-file": "delete-file",
+    "delete-file": "Eliminar ficheiro",
     "delete-logs": "Eliminar historial",
     "delete-opening": "Eliminar abertura",
     "delete-record": "Remover registro",
@@ -451,7 +451,7 @@
     "destination-warehouse": "Destination warehouse",
     "detail": "Detalhe",
     "details": "Detalhes",
-    "difference": "difference",
+    "difference": "Diferença",
     "different-passwords": "As senhas não correspondem a 0",
     "different-than": "Diferente de",
     "disable": "Desativar",
@@ -508,7 +508,7 @@
     "email-notification-not-exists": "Notificación de email %name% no encontrada",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "email-replies-to",
-    "email-sent": "Sent by Mail",
+    "email-sent": "Email enviado",
     "email-sent-to": "email-sent-to",
     "email-signature": "email-signature",
     "email-to": "Email To",
@@ -1101,13 +1101,13 @@
     "parent-family-cant-be-child": "A família mãe não pode ser a mesma que a criança.",
     "parent-group": "Grupo Pai",
     "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
-    "parent-group-loop": "Parent group %parentGroup% causing circular relation.",
+    "parent-group-loop": "Grupo pai %parentGroup% causando relação circular",
     "partnumber": "Número da peça",
     "passenger": "Pasajero",
     "password": "Senha",
     "pattern": "pattern",
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
-    "pattern-without-serie": "El patrón elegido no incluye serie, por lo que es posible que genere códigos duplicados para cada serie",
+    "pattern-without-serie": "O padrão escolhido não inclui série, o que pode gerar códigos duplicados para cada série",
     "pattern-without-year": "O padrão escolhido não inclui exercício ou data, pelo que pode gerar códigos duplicados em cada exercício",
     "pay": "pay",
     "pay-with-card": "pay-with-card",
@@ -1191,7 +1191,7 @@
     "print-price": "Imprimir precios",
     "print-quantity": "Imprimir cantidad",
     "printed": "Printed",
-    "printing-format": "printing-format",
+    "printing-format": "Formato de impressão",
     "printing-formats": "printing-formats",
     "priority": "Prioridade",
     "private": "Privado",
@@ -1561,7 +1561,7 @@
     "type-debug": "Type debug",
     "type-emergency": "Tipo de emergência",
     "type-error": "Type error",
-    "type-info": "Type info",
+    "type-info": "Informação do tipo",
     "type-notice": "Type notice",
     "type-success": "type-success",
     "type-warning": "Type warning",
@@ -1666,7 +1666,7 @@
     "yes": "Sim",
     "yesterday": "Ontem",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
-    "you-sent-a-audio": "Enviaste un audio",
+    "you-sent-a-audio": "Enviaste um áudio",
     "you-sent-a-document": "Enviaste un documento",
     "you-sent-a-location": "Você enviou uma localização",
     "you-sent-a-picture": "Você enviou uma imagem",
