--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -774,7 +774,7 @@
     "invalid-alphanumeric-code": "El codi introduït (%value%) no és vàlid. (%column%) ha de tindre entre %min% i %max% números o lletres.",
     "invalid-column-lenght": "La columna %column% ha de tindre entre %min% i %max% caràcters.",
     "invalid-date": "%date% no és una data vàlida.",
-    "invalid-date-there-are-invoices-after": "Data no vàlida. Ja hi ha factures amb data posterior a %date%",
+    "invalid-date-there-are-invoices-after": "Data no vàlida: %date%. La factura %other% és posterior i tanmateix té data anterior: %other-date%. Tota factura ha de tindre una data anterior o igual a la següent.",
     "invalid-date-there-are-invoices-before": "Data no vàlida. La data %date% és posterior a la data de la factura següent.",
     "invalid-iban": "IBAN no vàlid: %iban%",
     "invalid-iso-code": "Código ISO ''%iso-code% no válido",
@@ -976,7 +976,7 @@
     "month-5": "Mayo",
     "month-6": "Juny",
     "month-7": "Julio",
-    "month-8": "Agosto",
+    "month-8": "Agost",
     "month-9": "Septiembre",
     "month-name": "Nom del més",
     "month-wildcard-info": "Més actual (de la data actual)",
@@ -1178,7 +1178,7 @@
     "previous-balance": "Balanç anterior",
     "previous-documents": "Documents previs",
     "previous-quarter": "Trimestre anterior",
-    "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
+    "previously-purchased-from-supplier": "Comprat anteriorment al proveïdor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Preu",
     "price-with-tax": "Preu + impostos",
@@ -1270,8 +1270,8 @@
     "reject": "Rechazar",
     "rejected": "Rebutjat",
     "related": "related",
-    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
-    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
+    "related-subaccount-bank-charges": "Subcompte relacionada per a despeses bancàries (comissions, etc)",
+    "related-subaccount-purchases-sales": "Subcompte relacionada per a compres i vendes",
     "reloading": "Recarregant...",
     "remove-filter": "remove-filter",
     "remove-from-list": "Treure",
@@ -1544,7 +1544,7 @@
     "totalirpf-value-error": "El total del IRPF de %docType% %docCode% no és incorrecte (%docTotalIRPF%). La cantitat correcta és: %calcTotalIRPF%",
     "totaliva-value-error": "El total del IVA de %docType% %docCode% és incorrecte (%docTotalTax%). La cantitat correcta és: %calcTotalTax%",
     "totallinea-value-error": "Erro en el valor totallinea de la llínea del IVA de l'impost %taxCode% de la factura. El valor correcte és: %totalLine%",
-    "totals": "Totales",
+    "totals": "Totals",
     "town": "Ciutat",
     "tracking-code": "tracking-code",
     "transfer": "Transferència",
@@ -1552,7 +1552,7 @@
     "transfers-stock": "Transferències d'estoc",
     "translation": "Traducción",
     "translations": "Traduccions",
-    "travel": "Viaje",
+    "travel": "Viage",
     "try-again-later": "Prova una atra volta més tart",
     "tuesday": "tuesday",
     "type": "Tipus",
